added new feature

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <ul>
         <li><a href="stores">Stores</a></li>
         <li><a href="mac">Mac</a></li>
-        <li><a href="ipad">Ipad</a></li>
+        <li><a href="ipad">Ipads</a></li>
         <li><a href="iphone">Iphone</a></li>
         <li><a href="watch">Watch</a></li>
         <li><a href="airpods">Airpods</a></li>
