javascript included with other modifications

--- a/index.html
+++ b/index.html
@@ -1,86 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>  
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta name="viewport" content="width=device-width" initial-scale="1.0">
+        <link rel="stylesheet" href="styles.css">
+        <title>Iphone X</title>
+    </head>
+    <body>
+        <header>
+            <nav id ="menu" >
+                <ul>
+                    <li><a href="stores">Stores</a></li>
+                    <li><a href="mac">Mac</a></li>
+                    <li><a href="ipad">Ipads</a></li>
+                    <li><a href="iphone">Iphone</a></li>
+                    <li><a href="watch">Watch</a></li>
+                    <li><a href="airpods">Airpods</a></li>
+                    <li><a href="tv & home ">TV & Home</a></li>
+                    <li><a href="accessories">Accessories</a></li>
+                    <li><a href="support">Support</a></li>
+                </ul>
+            </nav>
+            <div class="menu-icon" onclick="toggleMenu()">
+                <img src="icon-menu.png.png" alt="menu icon">
+            </div>
+        </header>
 
-<head>  
-    <meta name="viewport" content="width=device-width" initial-scale="1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Iphone X</title>
-</head>
-<body>
-    <header>
-      <nav>
-      <ul>
-        <li><a href="stores">Stores</a></li>
-        <li><a href="mac">Mac</a></li>
-        <li><a href="ipad">Ipads</a></li>
-        <li><a href="iphone">Iphone</a></li>
-        <li><a href="watch">Watch</a></li>
-        <li><a href="airpods">Airpods</a></li>
-        <li><a href="tv & home ">TV & Home</a></li>
-        <li><a href="accessories">Accessories</a></li>
-        <li><a href="support">Support</a></li>
-      </ul>
-      </nav>
-    </header>
+        <section class="banner">
+            <div class="main">
+                <h1>Experience the Future with iPhone X</h1>
+                <p>The revolutionary iPhone X features a stunning all-screen design, advanced Face ID and powerful A11 Bionic chip...<a href="#pricing" class="cta-button">CLICK NOW</a></p>
+            </div>  
+        </section>
 
-    <section class="banner">
-        <div class="main">
-            <h1>Experience the Future with iPhone X</h1>
-            <p>The revolutionary iPhone X features a stunning all-screen design, advanced Face ID and powerful A11 Bionic chip...<a href="#pricing" class="cta-button">Buy now</a></p>
-        </div>  
-    </section>
-
-    <section class="Feature">
-        <div class="intro">
-            <h2>Key Features</h2>
-        </div> 
-        <div class="featured-items">
+        <section class="Feature">
+            <div class="intro">
+                <h2>Key Features</h2>
+            </div> 
+            <div class="featured-items">
                 <img src="img3.png.jpg" alt="Feature 2">
-            <div class="featured">
-                <h3>- All-screen Design</h3>
-                <p>The iPhone X boasts a beautiful edge-to-edge Super Retina display that precisely follows the curves of the device, offering an immersive visual experience</p>
-            </div>
+                <div class="featured">
+                    <h3>- All-screen Design</h3>
+                    <p>The iPhone X boasts a beautiful edge-to-edge Super Retina display that precisely follows the curves of the device, offering an immersive visual experience</p>
+                </div>
                 <img src="img4.png.jpg" alt="Feature 3">
-            <div class="featured">
-                <h3>- Face ID</h3>
-                <p>With advanced facial recognition technology,you can securely unlock your iPhone X,authenticate apps and make payments with a glance. </p>
-            </div>
+                <div class="featured">
+                    <h3>Face ID</h3>
+                    <p>With advanced facial recognition technology,you can securely unlock your iPhone X,authenticate apps and make payments with a glance. </p>
+                </div>
                 <img src="img5.png.jpg" alt="Feature 4">
-            <div class="featured">
-                <h3>- A11 Bionic chip</h3>
-                <p>The A11 Bionic chip with neural engine powers incredible augumented reality experience,stunning portraits with depth control and fast performance</p>
+                <div class="featured">
+                    <h3>- A11 Bionic chip</h3>
+                    <p>The A11 Bionic chip with neural engine powers incredible augumented reality experience,stunning portraits with depth control and fast performance</p>
+                </div>
             </div>
-                
-        </div>
-    </section>
+        </section>
 
-    <section class="pricing">
-        <h2>Pricing</h2>
-        <div class="pricing-table">
-            <div class="plan">
-                <h3>Standard</h3>
-                <p><strong>$200</strong></p>
-                    <p>64/128gb Storage</p>
-                    <p>Super Retina Display</p>
-                    <p>Face ID</p>
-                    <p>A11 Bionic chip</p>
-                <a href="#" class="cta-button">Buy Now</a>
-            </div>
-            <div class="plan">
-                <h3>Pro</h3>
-                <p><strong>$500</strong></p>
-                    <p>256gb Storage</p>
-                    <p>Super Retina Display</p>
-                    <p>Face ID</p>
-                    <p>A11 Bionic Chip</p>
-                <a href="#" class="cta-button">Buy Now</a>
-            </div>
-        </div>
-    </section>
+        <section class="pricing">
+            <h2>Pricing</h2>
+                <div class="pricing-table">
+                    <div class="plan">
+                        <h3>Standard</h3>
+                        <p><strong>$200</strong></p>
+                        <p>64/128gb Storage</p>
+                        <p>Super Retina Display</p>
+                        <p>Face ID</p>
+                        <p>A11 Bionic chip</p>
+                        <a href="#" class="cta-button">Buy Now</a>
+                    </div>
+                    <div class="plan">
+                        <h3>Pro</h3>
+                        <p><strong>$500</strong></p>
+                        <p>256gb Storage</p>
+                        <p>Super Retina Display</p>
+                        <p>Face ID</p>
+                        <p>A11 Bionic Chip</p>
+                        <a href="#" class="cta-button">Buy Now</a>
+                    </div>
+                </div>
+        </section>
 
     <footer>
         <p>&copy;2023 Your company. All rights reserved.</p>
     </footer>
-</body>
+
+    <script src="sandbox2.js"></script>
+    </body>
           
 </html>
