--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>  
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta name="viewport" content="width=device-width" initial-scale="1.0">
+        <meta name="viewport" content="width=device-width initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
         <title>Iphone X</title>
     </head>
@@ -16,7 +16,7 @@
                     <li><a href="ipad">Ipads</a></li>
                     <li><a href="iphone">Iphone</a></li>
                     <li><a href="watch">Watch</a></li>
-                    <li><a href="airpods">Airpods</a></li>
+                    <li><a href="airpods">Airpods</a></li> 
                     <li><a href="tv & home ">TV & Home</a></li>
                     <li><a href="accessories">Accessories</a></li>
                     <li><a href="support">Support</a></li>
