The complete version

--- a/index.html
+++ b/index.html
@@ -3,69 +3,60 @@
     <head>  
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<<<<<<< HEAD
-        <meta name="viewport" content="width=device-width initial-scale=1.0">
-=======
-        <meta name="viewport" content="width=device-width" initial-scale="1.0">
->>>>>>> 52db2d5801553be6b788a3c1d13ef843ae029ed6
+        <meta name="viewport" content="width= device-width, initial-scale= 1.0">
         <link rel="stylesheet" href="styles.css">
         <title>Iphone X</title>
     </head>
     <body>
-        <header>
-            <nav id ="menu" >
-                <ul>
-                    <li><a href="stores">Stores</a></li>
-                    <li><a href="mac">Mac</a></li>
-                    <li><a href="ipad">Ipads</a></li>
-                    <li><a href="iphone">Iphone</a></li>
-                    <li><a href="watch">Watch</a></li>
-<<<<<<< HEAD
-                    <li><a href="airpods">Airpods</a></li> 
-=======
-                    <li><a href="airpods">Airpods</a></li>
->>>>>>> 52db2d5801553be6b788a3c1d13ef843ae029ed6
-                    <li><a href="tv & home ">TV & Home</a></li>
-                    <li><a href="accessories">Accessories</a></li>
-                    <li><a href="support">Support</a></li>
-                </ul>
-            </nav>
-            <div class="menu-icon" onclick="toggleMenu()">
-                <img src="icon-menu.png.png" alt="menu icon">
-            </div>
-        </header>
+        <div class="container">
+            <header>
+                <nav id ="menu" >
+                    <ul>
+                        <li><a href="stores">Stores</a></li>
+                        <li><a href="mac">Mac</a></li>
+                        <li><a href="ipad">Ipads</a></li>
+                        <li><a href="iphone">Iphone</a></li>
+                        <li><a href="watch">Watch</a></li>
+                        <li><a href="airpods">Airpods</a></li> 
+                        <li><a href="tv & home ">TV & Home</a></li>
+                        <li><a href="accessories">Accessories</a></li>
+                        <li><a href="support">Support</a></li>
+                    </ul>
+                </nav>
+            </header>
+        </div>
 
-        <section class="banner">
+        <div class="banner">
             <div class="main">
                 <h1>Experience the Future with iPhone X</h1>
                 <p>The revolutionary iPhone X features a stunning all-screen design, advanced Face ID and powerful A11 Bionic chip...<a href="#pricing" class="cta-button">CLICK NOW</a></p>
-            </div>  
-        </section>
+            </div> 
+        </div>
 
-        <section class="Feature">
+        <div class="Feature">
             <div class="intro">
                 <h2>Key Features</h2>
             </div> 
             <div class="featured-items">
-                <img src="img3.png.jpg" alt="Feature 2">
                 <div class="featured">
+                    <img src="img3.png.jpg" alt="Feature 2">
                     <h3>- All-screen Design</h3>
                     <p>The iPhone X boasts a beautiful edge-to-edge Super Retina display that precisely follows the curves of the device, offering an immersive visual experience</p>
                 </div>
-                <img src="img4.png.jpg" alt="Feature 3">
                 <div class="featured">
-                    <h3>Face ID</h3>
+                    <img src="img4.png.jpg" alt="Feature 3">
+                    <h3>-Face ID</h3>
                     <p>With advanced facial recognition technology,you can securely unlock your iPhone X,authenticate apps and make payments with a glance. </p>
                 </div>
-                <img src="img5.png.jpg" alt="Feature 4">
                 <div class="featured">
+                    <img src="img5.png.jpg" alt="Feature 4">
                     <h3>- A11 Bionic chip</h3>
                     <p>The A11 Bionic chip with neural engine powers incredible augumented reality experience,stunning portraits with depth control and fast performance</p>
                 </div>
             </div>
-        </section>
+        </div>
 
-        <section class="pricing">
+        <div class="pricing">
             <h2>Pricing</h2>
                 <div class="pricing-table">
                     <div class="plan">
@@ -87,13 +78,12 @@
                         <a href="#" class="cta-button">Buy Now</a>
                     </div>
                 </div>
-        </section>
+            </div>
 
     <footer>
         <p>&copy;2023 Your company. All rights reserved.</p>
     </footer>
 
-    <script src="sandbox2.js"></script>
     </body>
           
 </html>
